--- a/skia-bindings/CMakeLists.txt
+++ b/skia-bindings/CMakeLists.txt
@@ -7,6 +7,7 @@ include_directories("skia/include/core")
 include_directories("skia/include/docs")
 include_directories("skia/include/effects")
 include_directories("skia/include/gpu")
+include_directories("skia/include/pathops")
 include_directories("skia/include/svg")
 include_directories("skia/src/xml")
 
